--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,9 @@
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@drawable/background_shape"
+            android:layout_margin="8dp">
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/topAppBar"
@@ -23,9 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:layout_marginBottom="10dp"
-                android:background="@drawable/shape_top_app_bar"
                 android:elevation="0dp"
-                android:padding="7dp"
                 app:navigationIcon="@drawable/baseline_menu_24"
                 app:title="@string/app_name">
 
@@ -35,7 +35,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end|center_vertical"
-                    android:layout_marginEnd="8dp"
                     android:contentDescription="@string/about"
                     app:icon="@drawable/baseline_info_24" />
 
@@ -90,8 +89,7 @@
                             android:layout_margin="10dp"
                             android:fontFamily="@font/b_ziba"
                             android:text="@string/energy"
-                            android:textAppearance="?attr/textAppearanceTitleMedium"
-                            android:textColor="@color/black" />
+                            android:textAppearance="?attr/textAppearanceTitleMedium" />
 
                         <com.google.android.material.switchmaterial.SwitchMaterial
                             android:id="@+id/switch_energy"
@@ -140,8 +138,7 @@
                             android:layout_margin="10dp"
                             android:fontFamily="@font/b_ziba"
                             android:text="@string/thanksgiving"
-                            android:textAppearance="?attr/textAppearanceTitleMedium"
-                            android:textColor="@color/black" />
+                            android:textAppearance="?attr/textAppearanceTitleMedium" />
 
                         <com.google.android.material.switchmaterial.SwitchMaterial
                             android:id="@+id/switch_thanksgiving"
